# bank-transaction-categorizer

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  start.py
data/raw/: TODAY_Statements_20250401-20250804 (1).csv  TODAY_Statements_20250401-20250804_first20.csv  test_bank_statements_1.csv  test_bank_statements_2.csv  test_bank_statements_3.csv  test_bank_statements_4.csv
src/: base_processor.py  celery_app.py  compact_processor.py  confidence_calculator.py  models.py  prompt_templates.py  streamlined_categorizer.py  tasks.py  utils.py  vendor_matcher.py
src/ui/: __init__.py  styles.py
src/ui/components/: navigation.py
src/ui/pages/: __init__.py  analytics.py  database.py  process_transactions.py  vendor_payments.py  vendors.py
